--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,53 @@
  *= require_tree .
  *= require_self
  */
+ @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
+
+ h1 {
+  text-align: center;
+ }
+
+ body {
+  font-family:'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 2rem;
+  background-color: white;
+  color: black;
+ }
+
+ form {
+  text-align: center;
+  width: 100%;
+}
+
+
+input {
+  box-sizing: border-box;
+  flex: 1;
+  font-size: 2rem;;
+  background-color: white;
+  border-width: 2px;
+  border-style: solid;
+  border-color: #d4d9dd;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  color: #474545;
+  padding: .75rem 1rem;
+}
+
+ button {
+  width: 100%;
+  display: flex;
+  box-sizing: border-box;
+  background-color: #387bab;
+  border-width: 2px;
+  border-style: solid;
+  border-color: #387bab;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;;
+  color: white;
+  font-size: 2rem;
+  font-weight: 400;
+  padding: 1.2rem 1.5rem;
+}
