--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,5 +1,18 @@
-<h1>Stupid Coaching</h1>
 
+<div class="border-start border-4 p-2">
+<%= params[:question] %>
+<br>
+<p>- You</p>
+</div>
+<br>
+
+<div class="border-start border-4 p-2" id="answer">
 <%= @answer %>
+<br>
+<p>- Your coach</p>
+</div>
+<br>
 
-<%= link_to'Ask a new question', ask_path %>
+<div class="link-primary">
+<%= link_to "Ask a new question", "/ask" %>
+</div>
